--- a/app/views/moments/_note.html.haml
+++ b/app/views/moments/_note.html.haml
@@ -15,6 +15,10 @@
         %p.moment-no-note-text
           = moment.content
 
+      .moment-content-actions
+        <a href="#" class="moment-content-actions-edit" title="Edit this note">Edit this note</a>
+        <a href="#" class="moment-content-actions-delete" title="Delete this note">Delete this note</a>
+
   .moment-btm
     .moment-actions
       %span.moment-actions-share
