--- a/app/views/users/_create_form.html.haml
+++ b/app/views/users/_create_form.html.haml
@@ -4,6 +4,17 @@
     = f.label :email, t("users.email address")
     %br
     = f.text_field :email, {class: "autofocus", type: "email", autocorrect: "off", autocapitalize: "off"}
+  
+  %p
+    = f.label :first_name, t("users.first name")
+    %br
+    = f.text_field :first_name, {autocorrect: "off", autocapitalize: "off"}
+
+  %p
+    = f.label :last_name, t("users.last name")
+    %br
+    = f.text_field :last_name, {autocorrect: "off", autocapitalize: "off"}
+
   %p
     = f.label :username, t("users.user name")
     %br
