Added edit delete options to mobile version

--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -30,6 +30,24 @@
 
 .moment-btm
 
+
+// !Edit / delete in a note
+
+.moment-no
+  .moment-content-actions
+    position: absolute
+    top: auto
+    bottom: 0
+    right: 8px
+    left: auto
+
+  .moment-content-actions-edit
+    +border-radius(5px 0 0 0)
+
+  .moment-content-actions-delete
+    +border-radius(0 5px 0 0)
+
+
 // !Share comment like etc.
 
 .moment-actions
