--- a/app/views/users/home.html.haml
+++ b/app/views/users/home.html.haml
@@ -2,5 +2,8 @@
 
 %article.social-feed
   = render partial: "moments/daily_verse"
+  = render partial: "moments/cta/find_friends"
+  = render partial: "moments/cta/profile"
+  = render partial: "moments/cta/sharing"
 
   = render partial: "moments/cards", locals: {moments: @moments}
