Adding content plain text method and ability for ReferenceString class to understand USFM API strings and moment verses to load plain text scripture appropriately.

--- a/app/views/moments/_bookmark.html.haml
+++ b/app/views/moments/_bookmark.html.haml
@@ -13,7 +13,7 @@
 
       - if moment.references.present?
         - moment.references.each do |ref|
-          %p.moment-verse{"data-usfm" => ref.usfm, "data-version-id" => ref.version_id }
+          %p.moment-verse{"data-usfm" => usfm_from_moment(ref), "data-version-id" => ref.version_id }
             = "#{ref.human}(#{ref.usfm})"
 
       - if moment.labels.present?
