Small padding on sides for friend label so text doesn't bleed to edge for looooong names.

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -506,7 +506,7 @@ body.transition .moment
 .moment-fr-name
   display: block
   background-color: #EEEDEB
-  padding: 5px 0 7px
+  padding: 5px 8px 7px
   margin: -5px auto 0
   width: 128px
   +border-radius(4px)
