adjust long moments so verse have a containing div with max-height

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -312,7 +312,8 @@ body.transition .moment
 
 
 // Moments that have verses (currently bookmark and highlight)
-.moment-bm
+.moment-verse-wrap
+  clear: both
   max-height: 250px
   overflow: hidden
 
