--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -147,8 +147,9 @@
 
 // !Bookmark moment
 
-.moment-bm
-  max-height: 250px
+.moment-verse-wrap
+  clear: both
+  max-height: 150px
   overflow: hidden
 
 // !Verse of the day moment
