--- a/app/views/moments/_highlight.html.haml
+++ b/app/views/moments/_highlight.html.haml
@@ -11,9 +11,10 @@
       %p.moment-bm-text
         = link_to(moment.moment_title.html_safe, moment.to_path, class: "moment-title-link")
       - if moment.references.present?
-        - moment.references.each do |ref|
-          %p.moment-verse{"data-usfm" => usfm_from_moment(ref), "data-version-id" => ref.version_id }
-            = "#{ref.human}(#{ref.usfm})"
+        .moment-verse-wrap
+          - moment.references.each do |ref|
+            %p.moment-verse{"data-usfm" => usfm_from_moment(ref), "data-version-id" => ref.version_id }
+              = "#{ref.human}(#{ref.usfm})"
 
       .moment-content-actions
         <a href="#" class="moment-content-actions-edit" title="Edit this highlight">Edit this highlight</a>
