Styled PSA moments for when a user has no moments

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -519,6 +519,26 @@ body.transition .moment
   display: block
   text-align: center
 
+
+// !PSA moment
+
+.moment-psa
+  padding: 15px
+  background-color: #fff
+  border-radius: 4px
+  text-align: center
+
+  .action_button_blue
+    width: 250px
+
+.moment-psa-text
+  font-size: 1.4em
+  letter-spacing: -0.02em
+
+.psa-social-img,
+.psa-friends-img
+  margin: -10px 0 20px 0
+
 // !------------------------ Detail page -------------------------
 
 #main article.social-detail
