--- a/app/views/moments/cta/_find_friends.html.haml
+++ b/app/views/moments/cta/_find_friends.html.haml
@@ -1,5 +1,7 @@
 .moment
   .moment-psa
     %p.moment-psa-text
-      See your friends’ moments in the Bible
-    <a href="#" class="moment-psa-btn">Find friends</a>
+      See your friends’ moments in the Bible.
+    = image_tag "social-psa-profiles.png", class: "psa-friends-img"
+    %br
+    <a href="#" class="moment-psa-btn action_button_blue">Find friends</a>
