--- a/app/views/moments/cta/_profile.html.haml
+++ b/app/views/moments/cta/_profile.html.haml
@@ -1,5 +1,5 @@
 .moment
   .moment-psa
     %p.moment-psa-text
-      Help your friends find you
-    <a href="#" class="moment-psa-btn">Update your profile</a>
+      Help your friends find you.
+    <a href="#" class="moment-psa-btn action_button_blue">Update your profile</a>
