--- a/app/views/moments/cta/_sharing.html.haml
+++ b/app/views/moments/cta/_sharing.html.haml
@@ -2,4 +2,6 @@
   .moment-psa
     %p.moment-psa-text
       Share verses with social networks.
-    <a href="#" class="moment-psa-btn">Enable sharing</a>
+    = image_tag "social-share-icons.png", class: "psa-social-img"
+    %br
+    <a href="#" class="moment-psa-btn action_button_blue">Enable sharing</a>
