Color differentiation for moment titles.

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -593,6 +593,10 @@ body.transition .moment
     height: 200px
 
 
+.moment-title-link b
+  color: #222
+
+
 // !Retina images
 
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)
