First round updates: added app icon and some text changes

--- a/app/views/layouts/kids.html.haml
+++ b/app/views/layouts/kids.html.haml
@@ -38,8 +38,9 @@
 
       -# !Logo and intro copy
 
+      %img.intro-icon{ src: "/assets/campaigns/kids/app-icon.png", alt: "App icon for The Bible App for Kids"}
       %h1.intro-bible
-        The Bible App&trade;
+        The Bible App
       .intro-forkids
         %h2.intro-for
           for
@@ -49,12 +50,12 @@
         by YouVersion
 
       %p.intro-help
-        Help your kids fall in love with God's Word.
+        Help your kids fall in love with God’s Word.
 
       %img.intro-img{ src: "/assets/campaigns/kids/hdr-jesus.png", alt: "Jesus and friends"}
 
       %p.intro-coming
-        Coming late 2013!
+        Coming November 28!
 
 
 
@@ -104,7 +105,7 @@
 
         - fb_app_id   = Cfg.facebook_app_id
         - fb_name     = "The Bible App for Kids"
-        - fb_desc     = "Meet the Bible App for Kids from YouVersion: animated Bible stories in a free app for smartphones and tablets. Learn, play, and grow in God's Word. Coming late 2013: bible.com/kids"
+        - fb_desc     = "It’s almost here! The Bible App for Kids is launching on November 28, Thanksgiving Day. Interactive Bible stories in a free app for iOS and Android. See a preview at bible.com/kids"
         - fb_link     = "http://www.bible.com/kids"
         - fb_redirect = "http://www.bible.com/kids"
 
@@ -112,13 +113,13 @@
           Facebook
 
 
-        - twitter     = "Meet the Bible App for Kids from @YouVersion. Learn, play, and grow in God's Word. Coming late 2013: bible.com/kids"
+        - twitter     = "The Bible App for Kids from @YouVersion is launching on Thanksgiving Day! See a preview: bible.com/kids"
         %a.share-tw{target:"_blank", href: "https://twitter.com/intent/tweet?text=#{twitter}#"}
           Twitter
 
 
         - subject     = "Meet the Bible App for Kids from YouVersion"
-        - body        = "YouVersion is making a Bible App for Kids! I’m excited for them to have their very own Bible App so they can learn, play, and grow in God’s Word. They’ll be able to explore a growing collection of Bible stories with touch-activated animations and learning activities. And it’s free, so our whole family can install it on our iOS or Android devices. I just signed up to be notified when it’s available later this year and thought you might be interested too. Sign up here: bible.com/kids"
+        - body        = "The Bible App for Kids will launch on November 28, Thanksgiving Day!  I’m excited for kids to have their very own Bible App so they can learn, play, and grow in God’s Word. They’ll be able to explore a growing collection of Bible stories with touch-activated animations and learning activities. And it’s free, so our whole family can install it on our iOS or Android devices. Set an alarm on your phone to download the app on Thanksgiving morning."
         %a.share-em{href: "mailto:?subject=#{subject}&body=#{body}"}
           Email
 
