--- a/app/assets/stylesheets/campaigns/kids.sass
+++ b/app/assets/stylesheets/campaigns/kids.sass
@@ -14,10 +14,14 @@ p
 .kids
   width: 980px
   margin: 0 auto
-  padding-top: 70px
-  background: image-url("campaigns/kids/yv-logo-sm.png") no-repeat 46% 44px
 
 // !Logo and intro copy
+
+.intro-icon
+  height: 152px
+  width: 152px
+  margin: 50px 0 15px 39.5%
+  display: block
 
 .intro-bible
   font:
@@ -26,7 +30,7 @@ p
     weight: normal
   letter-spacing: -.05em
   color: #525261
-  margin: 0 0 0 290px
+  margin: 0 0 0 307px
 
 .intro-forkids
   margin: -5px 0 0 435px
@@ -52,7 +56,7 @@ p
   display: none
 
 .intro-help
-  margin: 20px 0 0 335px
+  margin: 20px 0 0 280px
   font-size: 26px
   width: 260px
 
