Adding and ignoring friends now made possible.

--- a/app/assets/stylesheets/_notifications.sass
+++ b/app/assets/stylesheets/_notifications.sass
@@ -166,7 +166,7 @@
     .arrow
       left: 169px
 
-#notify-item
+.notify-item
   +border-radius(3px)
   background: #fff
   border: 1px solid #cac9c9
@@ -192,11 +192,6 @@
     p
       line-height: 26px
       margin-bottom: 0px
-
-    .text-link
-      display: block
-      float: left
-      margin-right: 4px
 
     .timestamp
       color: #aaa
