--- a/app/views/moments/_bookmark.html.haml
+++ b/app/views/moments/_bookmark.html.haml
@@ -28,17 +28,5 @@
 
   -# !share controls, dates, and comments
   .moment-btm
-    .moment-actions
-      %span.moment-actions-share
-        <a href="#" title="Share this with friends or family">Share</a>
-
-      %span.moment-actions-like
-        <a href="#" title="Like this">Like</a>
-
-      %span.moment-actions-comment
-        <a href="#" title="Leave a comment about this">Comment</a>
-
-      %span.moment-actions-time
-        = moment.created_dt
-
+    = render partial: "moments/actions_bar", locals: {moment: moment}
     = render partial: "moments/comments", locals: {moment: moment}
