fix mobile friend request layer display and move mobile nav icon to far left

--- a/app/assets/stylesheets/_notifications.sass
+++ b/app/assets/stylesheets/_notifications.sass
@@ -116,7 +116,7 @@
 
       .item-content
         float: left
-        min-width: 250px
+        min-width: 70%
 
         img
           height: 48px
@@ -143,8 +143,8 @@
 
       .item-actions
         float: right
-        min-width: 80px
-        margin-left: 20px
+        min-width: 25%
+        margin-left: 4%
 
         .action_button_green
           color: #fff
