--- a/app/assets/stylesheets/mobile/_header.sass
+++ b/app/assets/stylesheets/mobile/_header.sass
@@ -167,7 +167,7 @@
 #header .nav_btn
   height: 13px
   width: 18px
-  margin: 8px 10px 0 0
+  margin: 8px 10px 0 10px
   +border-radius(4px)
   background: #444 image-url("nav_btn.png") 0px 0px no-repeat
 
