--- a/app/assets/stylesheets/mobile/_notifications.sass
+++ b/app/assets/stylesheets/mobile/_notifications.sass
@@ -7,14 +7,19 @@
   height: 40px
   margin: 3px 0 0 15px
   text-indent: -9999px
+  position: absolute
 
 #header .friend-requests-btn
   background-position: 0px 9px
+  left: 38px
+  top: 0
 
 #header .notifications-btn
   background-position: 0px -55px
   margin-left: 0px
   margin-top: 3px
+  left: 95px
+  top: 0
 
 #header
   .header-popover
@@ -26,12 +31,15 @@
     opacity: 0
 
     .arrow  
-      left: 18px
+      left: 56px
+
+    .list-item
+      height: 100px      
 
   .header-popover.notifications
     left: 3px    
     padding: 0
 
     .arrow
-      left: 57px    
+      left: 97px    
 
