--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -62,10 +62,12 @@
   input[type="submit"].action_button_green,
   input[type="submit"].action_button_blue,
   input[type="submit"].action_button_red,
+  input[type="submit"].action_button_grey,
   .action_button_blue,
   .action_button_green,
-  .action_button_green
-    padding: 10px 0px !important
+  .action_button_green,
+  .action_button_grey
+    padding: 10px 0px  !important
     +box-shadow(inset rgba(0,0,0,0.2) 0 -2px 0, inset rgba(255, 255, 255,0.2) 0 2px 0 !important)
     border-radius: 4px
     border: none
