Added time_ago formatting for notifications page + tweaks.

--- a/app/views/moments/_actions_bar.html.haml
+++ b/app/views/moments/_actions_bar.html.haml
@@ -9,4 +9,4 @@
     <a href="#" title="Leave a comment about this">Comment</a>
 
   %span.moment-actions-time
-    = moment_creation_string moment.created_dt
+    = api_dt_time_ago(moment.created_dt)
