--- a/app/assets/stylesheets/_notifications.sass
+++ b/app/assets/stylesheets/_notifications.sass
@@ -10,20 +10,20 @@
 
   .activity-timestamp
     display: block
-    float: right
-    color: #ccc
-    min-width: 100px
-    padding-left: 10px
+    color: #aaa
+    font-size: 12px
 
 .notifications-list
   border-top: 1px solid #ccc
 
 .notifications-item
   p
+    padding: 8px
     margin-bottom: 0
-    line-height: 28px
-    border-bottom: 1px solid #ccc
-    padding: 5px 10px
+    line-height: 1.4em
+    border-bottom: 1px solid #ddd
+    
+    
 
 
 
