Requests/Notifications popovers shows container and loading indicator prior to completed ajax request.

--- a/app/assets/stylesheets/_notifications.sass
+++ b/app/assets/stylesheets/_notifications.sass
@@ -63,6 +63,9 @@
     -webkit-box-shadow: 0px 0px 8px #222
     box-shadow: 0px 0px 8px #222
 
+    .loading-indicator
+      text-align: center
+
     .action_button_green,
     .action_button_grey
       font-weight: normal !important
