--- a/app/assets/stylesheets/_header.sass
+++ b/app/assets/stylesheets/_header.sass
@@ -35,14 +35,6 @@
   line-height: 50px
   height: 50px
 
-#header a
-  color: #d4d4d4
-  text-decoration: none
-
-#header a:hover
-  color: #fff
-
-
 // `Header > Search
 //----------------------------------------------------------------------------------------------------
 
@@ -107,6 +99,14 @@
   height: 50px
   width: 290px
   font-size: 13px
+
+
+#header nav a
+  color: #d4d4d4
+  text-decoration: none
+
+#header nav a:hover
+  color: #fff
 
 #header nav ul,
 #header nav ol,
