fix mobile friend requests page

--- a/app/assets/stylesheets/_notifications.sass
+++ b/app/assets/stylesheets/_notifications.sass
@@ -169,7 +169,7 @@
     .arrow
       left: 169px
 
-.notify-item
+.list-item
   +border-radius(3px)
   background: #fff
   border: 1px solid #cac9c9
