--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -3,6 +3,7 @@
 // !we need a container that can contain moment cards that aren't tied to article.social-feed
 // !as user profile already defines an article where we can't easily get to it.
 
+#main article.social-requests,
 #main article.social-feed,
 #main div.social-feed,
 #main article.social-detail
