--- a/app/assets/stylesheets/mobile/_notifications.sass
+++ b/app/assets/stylesheets/mobile/_notifications.sass
@@ -41,5 +41,25 @@
     padding: 0
 
     .arrow
-      left: 97px    
+      left: 97px   
+
+.list-item
+  min-height: 100px
+  padding: 0px 10px 10px 10px
+  width: auto
+  margin-bottom: 10px
+
+  .item-content
+    padding-top: 20px
+    float: left
+    min-width: 70%
+    max-width: 70%
+
+  .item-actions
+    float: right
+    min-width: 0
+    margin: 0
+
+
+
 
