--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -1,5 +1,6 @@
 // !Adjusting the article tag on the social pages
 
+#main article.social-requests,
 #main article.social-feed,
 #main div.social-feed,
 #main article.social-detail
