fix list-item class conflict

--- a/app/assets/stylesheets/_notifications.sass
+++ b/app/assets/stylesheets/_notifications.sass
@@ -22,9 +22,10 @@
     margin-bottom: 0
     line-height: 1.4em
     border-bottom: 1px solid #ddd
-    
-    
 
+article.social-requests ul
+  margin-bottom: 0    
+    
 
 
 // `Header > Friend Requests & Notifications
@@ -169,7 +170,7 @@
     .arrow
       left: 169px
 
-.list-item
+.notify-item
   +border-radius(3px)
   background: #fff
   border: 1px solid #cac9c9
