Relative url for comment user links and hover style for popover 'all' links

--- a/app/assets/stylesheets/_notifications.sass
+++ b/app/assets/stylesheets/_notifications.sass
@@ -92,6 +92,9 @@ article.social-requests ul
       display: block
       padding: 12px 0px
 
+    .text-link.wide:hover
+      background: #f3f3f3
+
     h4
       font-size: 12px
       color: #505050
