--- a/app/assets/stylesheets/campaigns/kids.sass
+++ b/app/assets/stylesheets/campaigns/kids.sass
@@ -20,10 +20,10 @@ p
 // !Logo and intro copy
 
 .intro-icon
-  height: 152px
-  width: 152px
-  margin: -90px 0 15px 39.5%
-  display: block
+  //height: 152px
+  //width: 152px
+  //margin: -90px 0 15px 39.5%
+  display: none
 
 .intro-bible
   font:
