--- a/app/views/layouts/kids.html.haml
+++ b/app/views/layouts/kids.html.haml
@@ -54,7 +54,7 @@
       %img.intro-img{ src: "/assets/campaigns/kids/hdr-jesus.png", alt: "Jesus and friends"}
 
       %p.intro-coming
-        Coming November 28!
+        Coming on Thursday!
 
 
       %img.intro-icon{ src: "/assets/campaigns/kids/app-icon.png", alt: "App icon for The Bible App for Kids"}
@@ -68,12 +68,12 @@
       .hero
         = image_tag "campaigns/kids/hero.jpg", class: "hero-screen", alt: "Jesus heals the paralytic"
         .youtube-embed
-          %iframe{width:"805", height:"607", src: "//www.youtube.com/embed/nNLIv9LRc24?rel=0", frameborder: "0", allowfullscreen: "true"}
+          %iframe{width:"805", height:"607", src: "//www.youtube.com/embed/oGC05HfOo4s", frameborder: "0", allowfullscreen: "true"}
         %p.hero-copy
           Interact with the Bible and see it come to life.
 
       .youtube-mobile
-        %iframe{width:"100%", height:"auto", src: "//www.youtube.com/embed/nNLIv9LRc24?rel=0", frameborder: "0", allowfullscreen: "true"}
+        %iframe{width:"100%", height:"auto", src: "//www.youtube.com/embed/oGC05HfOo4s", frameborder: "0", allowfullscreen: "true"}
 
       -# !Smaller screenshots
 
