Missed a text change

--- a/app/views/campaigns/kids/_share.html.haml
+++ b/app/views/campaigns/kids/_share.html.haml
@@ -2,7 +2,7 @@
 
 .share
   %p.share-copy
-    Tell your friends about The Bible App for Kids...coming Thanksgiving Day!
+    Tell your friends about The Bible App for Kids...coming on Thursday!
 
   - fb_app_id   = Cfg.facebook_app_id
   - fb_name     = "The Bible App for Kids"
