mobile main nag menu & fixed positioning mods

--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -380,6 +380,9 @@ p
   header #slideToNav
     display: none !important
 
+  header .popover-link  
+    display: none !important
+
   header #logo
     display: block !important
 
