--- a/app/assets/stylesheets/mobile/_header.sass
+++ b/app/assets/stylesheets/mobile/_header.sass
@@ -5,11 +5,15 @@
   height: 45px !important
   border-radius: 0px !important
   padding: 0px !important
+  width: 100%
 
 #header_outer
   padding: 0
   z-index: 901
-  position: relative
+  position: fixed
+  height: 47px
+  width: 100%
+  left: 0
 
 #header,
 .reader_modal_header
@@ -21,7 +25,7 @@
 
 
 #header h1
-  margin: 8px 0 0
+  margin: 8px 0 0 82px
   padding: 0
   font: bold 16px Arial, sans-serif
   color: #999 !important
