--- a/app/views/shared/_head.html.haml
+++ b/app/views/shared/_head.html.haml
@@ -13,7 +13,7 @@
   %meta{name: 'Description', content: @meta_description || @site.description}
   %meta{name: "HandheldFriendly", content: "True"}
   %meta{name: "MobileOptimized", content: "320"}
-  %meta{name: "viewport", content: "width=device-width, target-densitydpi=160, initial-scale=1.0"}
+  %meta{name: "viewport", content: "width=device-width, initial-scale=1.0, user-scalable=no"}
   %meta{name: "msApplication-ID", content: "af5f6405-7860-49a9-a6b4-a47381974e1d"}
   %meta{name: "msApplication-PackageFamilyName", content: "LifeChurch.tv.Bible_d1phjsdba8cbj"}
 
