Functional badges page.

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -550,6 +550,15 @@ body.transition .moment
 .psa-friends-img
   margin: -10px 0 20px 0
 
+
+.profile-badges-list
+  overflow: auto
+
+.profile-badges-list .moment
+  float: left
+
+
+
 // !------------------------ Detail page -------------------------
 
 #main article.social-detail
