mobile menu tweaks

--- a/app/assets/stylesheets/mobile/_nav_primary.sass
+++ b/app/assets/stylesheets/mobile/_nav_primary.sass
@@ -41,9 +41,13 @@
   z-index: 200
   overflow-y: auto
   max-height: 352px
+  +box-shadow(rgba(#000, 0.75) 0 2px 5px 0)
 
   nav 
     display: none
+
+  ul
+    margin-bottom: 0  
 
   li
     list-style-type: none
