--- a/app/assets/stylesheets/mobile/_header.sass
+++ b/app/assets/stylesheets/mobile/_header.sass
@@ -25,7 +25,7 @@
 
 
 #header h1
-  margin: 8px 0 0 82px
+  margin: 8px 0 0
   padding: 0
   font: bold 16px Arial, sans-serif
   color: #999 !important
