--- a/app/views/shared/header/_default.html.haml
+++ b/app/views/shared/header/_default.html.haml
@@ -1,3 +1,6 @@
+:ruby
+  is_home_url       = current_page?("/home")
+
 #header_outer
 
   %header#header{role:"banner"}
@@ -5,13 +8,14 @@
     %a#logo{href: "/", style: "#{@site.logo_style}; background-image: url(#{asset_path(@site.logo_image)})"}
       = @site.title
 
-    %a.friend-requests-btn.popover-link{href: "#"}
-      =t("requests")
-    = render partial: "shared/header/requests"
+    - if is_home_url
+      %a.friend-requests-btn.popover-link{href: "#"}
+        =t("requests")
+      = render partial: "shared/header/requests"
 
-    %a.notifications-btn.popover-link{href: "#"}
-      =t("notifications")
-    = render partial: "shared/header/notifications"
+      %a.notifications-btn.popover-link{href: "#"}
+        =t("notifications")
+      = render partial: "shared/header/notifications"
 
     -# Sign in and user id
     %nav.sign_in
