--- a/app/views/moments/_highlight.html.haml
+++ b/app/views/moments/_highlight.html.haml
@@ -13,7 +13,7 @@
       - if moment.references.present?
         .moment-verse-wrap
           - moment.references.each do |ref|
-            %p.moment-verse{"data-usfm" => usfm_from_moment(ref), "data-version-id" => ref.version_id }
+            %p.moment-verse.empty{"data-usfm" => usfm_from_moment(ref), "data-version-id" => ref.version_id }
               = "#{ref.human}(#{ref.usfm})"
 
       = render partial: "moments/owner_actions", locals: {moment: moment}
